# fastapi_movie_app

./: main.py  pyproject.toml
auth/: jwt.py  userdb.py
data/: crud.py  database.py  models.py  schemas.py
data/crud/: movie_crud.py  user_crud.py
data/models/: movie_models.py  user_models.py
data/schemas/: movie_schemas.py  user_schemas.py
postgres_session/: database.py
routers/: movies.py  users.py
tests/: movie_test.py  setup_test_env.py  test.py  user_test.py
